Changed name of executable to taskninja.jar

--- a/build.gradle
+++ b/build.gradle
@@ -74,7 +74,7 @@ allprojects {
     }
     
     shadowJar {
-        archiveName = "taskmanager.jar"
+        archiveName = "taskninja.jar"
 
         manifest {
             attributes "Main-Class": "seedu.manager.MainApp"
