--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ allprojects {
         compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
         compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jacksonDataTypeVersion"
         compile "com.google.guava:guava:$guavaVersion"
-        compile "com.joestelmach:natty:0.12"
+        compile "org.ocpsoft.prettytime:prettytime-nlp:4.0.0.Final"
 
         testCompile "junit:junit:$junitVersion"
         testCompile "org.testfx:testfx-core:$testFxVersion"
