--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Task Ninja</name>
+	<name>main</name>
 	<comment>Project Task Ninja created by Buildship.</comment>
 	<projects>
 	</projects>
